--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+/.yarn
 .yarn/*
 # OS
 .DS_Store
@@ -33,6 +34,7 @@ lerna-debug.log*
 *.sublime-workspace
 
 # IDE - VSCode
+/.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
