--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mongoose": "^11.0.4",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
     "reflect-metadata": "^0.2.2",
